<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowingMeal">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.153" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="16dp"
        android:background="#3F9933"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@color/common_google_signin_btn_text_dark_pressed" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/menu_img"

                android:layout_width="301dp"
                android:layout_height="193dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.006"
                tools:srcCompat="@tools:sample/avatars[5]" />


            <TextView
                android:id="@+id/menu_name"
                android:layout_width="331dp"
                android:layout_height="127dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/textcosomized"
                android:padding="10dp"
                android:text="@string/MealName"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_img"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/menu_price"
                android:layout_width="119dp"
                android:layout_height="38dp"
                android:background="@drawable/costumedbox"
                android:padding="10dp"
                android:text="@string/PriceMenu"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/menu_name"
                app:layout_constraintEnd_toEndOf="@+id/menu_name"
                app:layout_constraintHorizontal_bias="0.902"
                app:layout_constraintStart_toStartOf="@+id/menu_name"
                app:layout_constraintTop_toTopOf="@+id/menu_name"
                app:layout_constraintVertical_bias="0.023" />

            <TextView
                android:id="@+id/menu_des"
                android:layout_width="195dp"
                android:layout_height="83dp"
                android:background="@drawable/costumedbox"
                android:padding="10dp"
                android:text="@string/newdes"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/menu_name"
                app:layout_constraintEnd_toEndOf="@+id/menu_name"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="@+id/menu_name"
                app:layout_constraintTop_toTopOf="@+id/menu_name"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/click_write_review"
                android:layout_width="98dp"
                android:layout_height="34dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:padding="10dp"
                android:text="@string/ar1"
                android:textColor="#0009ff"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/menu_name"
                app:layout_constraintEnd_toEndOf="@+id/menu_name"
                app:layout_constraintHorizontal_bias="0.872"
                app:layout_constraintStart_toEndOf="@+id/menu_des"
                app:layout_constraintTop_toBottomOf="@+id/menu_price"
                app:layout_constraintVertical_bias="0.692" />

            <TextView
                android:id="@+id/menu_rate"
                android:layout_width="52dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ratebox"
                app:layout_constraintBottom_toTopOf="@+id/click_write_review"
                app:layout_constraintEnd_toEndOf="@+id/menu_name"
                app:layout_constraintHorizontal_bias="0.151"
                app:layout_constraintStart_toEndOf="@+id/menu_des"
                app:layout_constraintTop_toBottomOf="@+id/menu_price"
                app:layout_constraintVertical_bias="0.2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>